# Rust.api_actix-web_rust_hello-world

./: Cargo.toml
application/config/: Cargo.toml
application/config/src/: lib.rs
application/contracts/: Cargo.toml
application/contracts/src/: lib.rs
application/contracts/src/dto/: error_response_dto.rs  message_dto.rs  mod.rs
application/contracts/src/error_code/: error_code.rs
application/contracts/src/permissions/: message_permissions.rs  mod.rs
modules/actix_web_auth0/: Cargo.toml
modules/actix_web_auth0/src/extractors/: claims.rs  mod.rs
modules/macros/authorize/: Cargo.toml
modules/macros/authorize/src/: lib.rs
modules/macros/auto_log/: Cargo.toml
modules/macros/auto_log/src/: lib.rs
src/: api.rs  config.rs  main.rs  types.rs
src/api/: api_doc.rs  messages.rs  mod.rs
src/api/messages/: handlers.rs  mod.rs
src/extractors/: claims.rs
src/middlewares/: err_handlers.rs  mod.rs  security_headers.rs
