[workspace]
members = [
    ".",
    "modules/macros/authorize"
]

[package]
name = "api_actix-web_rust_hello-world"
version = "0.1.0"
authors = ["Sebastian Estrella <sestrella@stackbuilders.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = { version = "4.4.1", features = ["rustls"] }
actix-web-httpauth = "0.8.1"
awc = { version = "3.3.0" ,features = ["openssl"]}
dotenv = "^0.15.0"
env_logger = "0.10.1"
envy = "^0.4.2"
jsonwebtoken = "9.2.0"
serde = { version = "^1.0.130" ,features = ["derive"] }
thiserror = "1.0.52"

