[workspace]
members = [
    ".",
    "modules/macros/authorize",
    "application/contracts",
    "domain/shared",
    "modules/actix_web_auth0"
]

[package]
name = "api_actix-web_rust_hello-world"
version = "0.1.0"
authors = ["Sebastian Estrella <sestrella@stackbuilders.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = { version = "4.4.1" }
dotenvy = "0.15.7"
envy = "0.4.2"
env_logger = "0.10.1"
serde = { version = "^1.0.193", features = ["derive"] }
thiserror = "1.0.52"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-redoc = { version = "2.0.0", features = ["actix-web"] }
contracts = { path = "application/contracts" }
actix_web_auth0 = { path = "modules/actix_web_auth0" }
