[workspace]
members = [
    ".",
    "modules/macros/authorize",
    "application/contracts",
    "domain/shared",
    "modules/actix_web_auth0",
    "modules/macros/auto_log",
    "application/config",
]

[package]
name = "api_actix-web_rust_hello-world"
version = "0.1.0"
authors = ["TabooSun <taboosun1996@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = { version = "4.4.1" }
dotenvy = "0.15.7"
env_logger = "0.10.1"
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.52"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-redoc = { version = "2.0.0", features = ["actix-web"] }
contracts = { path = "application/contracts" }
actix_web_auth0 = { path = "modules/actix_web_auth0" }
auto_log = { path = "modules/macros/auto_log" }
log = "0.4.20"
utoipauto = "0.1.3"
url = "2.2.2"
url-builder = "0.1.1"
config = { path = "application/config" }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "2.0.0", features = ["actix-web"] }
